set01/problem02_compile_errors.txt
c:\Users\amogh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DrLexLuthor\set01\problem02.c: In function 'main':
c:\Users\amogh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DrLexLuthor\set01\problem02.c:10:1: error: expected ';' before 'int'
 int sum;
 ^~~
c:\Users\amogh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DrLexLuthor\set01\problem02.c:12:1: error: 'sum' undeclared (first use in this function)
 sum=a+b;
 ^~~
c:\Users\amogh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DrLexLuthor\set01\problem02.c:12:1: note: each undeclared identifier is reported only once for each function it appears in
